- Vehicle mod costs, availabilities, and slot capacity requirements can now use their parent vehicles' Armor, Sensor, and Pilot ratings.
- Special whitespace characters necessary for certain languages, e.g. non-breaking spaces in French or zero-width spaces in hyphenated English, are no longer automatically converted to standard, single-width spaces in characters' notes.

Data Changes:
- The Ares Light Fire 75's suppressor is no longer incorrectly referred to as the Ares Light Fire 70's suppressor.
- Added a new PDF Parameter option that is Adobe Acrobat-style, but always opens a new instance of the clicked file.
- Linguistics (the adept power) no longer increases a character's native language limit by 1.
- Amended Bunker Gear to properly get rating 8 Fire Resistance instead of rating 6.
- Limited Skill Autosofts to the skills listed in Rigger 5. 
- Added Skill Autosoft (Knowledge) per Rigger 5.
- Fixed Orks Have Natural Weapon Tusks customdata to provide Tusks instead of Horns.
- Fixed Ares Duelist not getting targeting autosoft
- Fixed Climate Adaptation and Proboscis metagenic qualities not having the correct flag. Closes #4278
- Added previously missing entries for the Proteus Krake's micro-torpedos and micro-torpedo launcher. Existing saves containing a Proteus Krake will have its previously buggy weapon mount entry replaced with a functional one that properly includes the micro-torpedo launcher.
- Added KEV toxin from Shadowrun Missions Season 8. Added SRM8 book.
- Removed the Advanced Ritual Casting requirement from Attune Item and Empower rituals. Closes #4277
- Added separate [Custom Cyberdeck] Firewall gear item for Fuchi Cyber-N.
- Corrected a few mentor spirit bonus texts that did not have spaces after colons.
- Added customdata to allow the weapon mounts from Rigger 5 to mount Sporting Rifles. Closes #4287
- Added Barehanded Adept to quality whitelist for Focused Concentration. Closes #4293