@@ -32,6 +32,7 @@ Application Fixes:
 - The Source label in the weapon mount creation screen is now properly clickable.
 - Vehicle mod costs, availabilities, and slot capacity requirements can now use their parent vehicles' Armor, Sensor, and Pilot ratings.
 - Special whitespace characters necessary for certain languages, e.g. non-breaking spaces in French or zero-width spaces in hyphenated English, are no longer automatically converted to standard, single-width spaces in characters' notes.
+- Armor, Vehicle, Vehicle Mod, Weapon, and Spell selection screens no longer show categories that have no selectable items (usually if the character does not have the necessary books enabled).
 
 Data Changes:
 - The Ares Light Fire 75's suppressor is no longer incorrectly referred to as the Ares Light Fire 70's suppressor.
